Обновление юнит тестов сервисов