@@ -1,5 +1,7 @@
 package com.unknown.post.services;
 
+import com.unknown.post.dtos.FullCommentDTO;
+import com.unknown.post.dtos.UserDTO;
 import com.unknown.post.entities.Comment;
 import com.unknown.post.entities.Post;
 import com.unknown.post.repositories.CommentRepository;
@@ -14,130 +16,140 @@ import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 
 @Slf4j
 @ExtendWith(MockitoExtension.class)
-class CommentServiceTest {
+public class CommentServiceTest {
+
+    @Mock
+    private PostRepository postRepository;
     @Mock
     private CommentRepository commentRepository;
     @Mock
-    private PostRepository postRepository;
+    private ReactionService reactionService;
+    @Mock
+    private UserService userService;
+
     @InjectMocks
     private CommentService commentService;
 
+    private final String testId = "commentId";
+    private final String testPostId = "postId";
+    private final String testAuthor = "authorId";
+    private final Comment testComment = new Comment("Test content", testAuthor, testPostId);
+    private final UserDTO testUser = new UserDTO(testAuthor, "username", "avatar");
+    private final FullCommentDTO expectedFullComment = new FullCommentDTO(
+            testAuthor,
+            "username",
+            "avatar",
+            testId,
+            "Test content",
+            testComment.getDate()
+    );
+
     @Test
     void getCommentByIdTest() {
-        log.info("getCommentByIdTest start.");
-        String id = "id";
-        var comment = new Comment("content", "author", "post");
-        Mockito.doReturn(Optional.of(comment)).when(commentRepository).findCommentById(id);
-        var res = commentService.getCommentById(id);
-        Assertions.assertEquals(comment, res);
-        Mockito.verify(commentRepository, Mockito.times(1)).findCommentById(id);
+        testComment.setId(testId);
+        Mockito.doReturn(Optional.of(testComment)).when(commentRepository).findCommentById(testId);
+        Mockito.doReturn(testUser).when(userService).getFullUser(testAuthor);
+
+        FullCommentDTO result = commentService.getCommentById(testId);
+
+        Mockito.verify(commentRepository).findCommentById(testId);
+        Mockito.verify(userService).getFullUser(testAuthor);
+        Assertions.assertEquals(expectedFullComment, result);
     }
 
     @Test
     void getCommentsByAuthorTest() {
-        log.info("getCommentsByAuthorTest start.");
-        String author = "author";
-        var comment = List.of(new Comment("content", author, "post"));
-        Mockito.doReturn(comment).when(commentRepository).findCommentsByAuthor(author);
-        var res = commentService.getCommentsByAuthor(author);
-        Assertions.assertEquals(comment, res);
-        Mockito.verify(commentRepository, Mockito.times(1)).findCommentsByAuthor(author);
+        testComment.setId(testId);
+        List<Comment> comments = Collections.singletonList(testComment);
+        List<UserDTO> users = Collections.singletonList(testUser);
+
+        Mockito.doReturn(comments).when(commentRepository).findCommentsByAuthor(testAuthor);
+        Mockito.doReturn(users).when(userService).getFullUsersGroup(Collections.singletonList(testAuthor));
+
+        List<FullCommentDTO> result = commentService.getCommentsByAuthor(testAuthor);
+
+        Mockito.verify(commentRepository).findCommentsByAuthor(testAuthor);
+        Mockito.verify(userService).getFullUsersGroup(Collections.singletonList(testAuthor));
+        Assertions.assertEquals(1, result.size());
+        Assertions.assertEquals(expectedFullComment, result.getFirst());
     }
 
     @Test
     void getCommentsByPostTest() {
-        log.info("getCommentsByPostTest start.");
-        String author = "author";
-        var comment = List.of(new Comment("content", author, "post"));
-        Mockito.doReturn(comment).when(commentRepository).findCommentsByAuthor(author);
-        var res = commentService.getCommentsByAuthor(author);
-        Assertions.assertEquals(comment, res);
-        Mockito.verify(commentRepository, Mockito.times(1)).findCommentsByAuthor(author);
+        testComment.setId(testId);
+        Post testPost = new Post("Title", "Content", "postAuthor");
+        testPost.setComments(Collections.singletonList(testId));
+
+        Mockito.doReturn(Optional.of(testPost)).when(postRepository).findPostById(testPostId);
+        Mockito.doReturn(Collections.singletonList(testComment)).when(commentRepository).findAllById(Collections.singletonList(testId));
+        Mockito.doReturn(Collections.singletonList(testUser)).when(userService).getFullUsersGroup(Collections.singletonList(testAuthor));
+
+        List<FullCommentDTO> result = commentService.getCommentsByPost(testPostId);
+
+        Mockito.verify(postRepository).findPostById(testPostId);
+        Mockito.verify(commentRepository).findAllById(Collections.singletonList(testId));
+        Mockito.verify(userService).getFullUsersGroup(Collections.singletonList(testAuthor));
+        Assertions.assertEquals(1, result.size());
+        Assertions.assertEquals(expectedFullComment, result.getFirst());
     }
 
     @Test
     void addCommentTest() {
-        log.info("addCommentTest start.");
-        String id = "id";
-        String post_id = "post";
-        var post = new Post("title", "content", "author");
-        var comment = new Comment("content", "author", post_id);
-        post.setId(post_id);
-        comment.setId(id);
-        Mockito.doReturn(Optional.of(post)).when(postRepository).findPostById(post_id);
-        Mockito.when(commentRepository.save(Mockito.any(Comment.class))).thenAnswer(invocation -> {
-                    Comment c = invocation.getArgument(0);
-                    c.setId(id);
-                    return c;
-                });
-        Mockito.when(postRepository.save(Mockito.any(Post.class))).thenAnswer(invocation -> {
-            Post p = invocation.getArgument(0);
-            p.setId(post_id); // Устанавливаем ID как при реальном сохранении
-            return p;
-        });
+        testComment.setId(testId);
+        Post testPost = new Post("Title", "Content", "postAuthor");
+        testPost.setComments(new ArrayList<>());
 
-        var res = commentService.addComment(comment.getContent(), comment.getAuthor(), comment.getPost_id());
-        Assertions.assertEquals(comment.getContent(), res.getContent());
-        Assertions.assertEquals(comment.getAuthor(), res.getAuthor());
-        Assertions.assertEquals(comment.getPost_id(), res.getPost_id());
+        Mockito.doReturn(Optional.of(testPost)).when(postRepository).findPostById(testPostId);
+        Mockito.doReturn(testComment).when(commentRepository).save(Mockito.any(Comment.class));
 
-        Mockito.verify(commentRepository).save(Mockito.argThat(commented ->
-                commented.getId().equals(comment.getId()) &&
-                commented.getContent().equals(comment.getContent()) &&
-                commented.getAuthor().equals(comment.getAuthor()) &&
-                commented.getPost_id().equals(comment.getPost_id())
-        ));
-        Mockito.verify(postRepository).save(Mockito.argThat(posted ->
-                posted.getTitle().equals(post.getTitle()) &&
-                posted.getContent().equals(post.getContent()) &&
-                posted.getAuthor().equals(post.getAuthor())&&
-                posted.getComments().size() == 1 &&
-                posted.getComments().getFirst().equals(id)
-        ));
+        Comment result = commentService.addComment("Test content", testAuthor, testPostId);
+
+        Mockito.verify(postRepository).findPostById(testPostId);
+        Mockito.verify(commentRepository).save(Mockito.any(Comment.class));
+        Mockito.verify(postRepository).save(testPost);
+        Assertions.assertEquals(testComment, result);
+        Assertions.assertTrue(testPost.getComments().contains(testId));
     }
 
     @Test
     void updateCommentTest() {
-        log.info("updateCommentTest start.");
-        String id = "id";
-        String content = "content";
-        var comment = new Comment(content, "author", "post");
-        Mockito.doReturn(Optional.of(comment)).when(commentRepository).findCommentById(id);
-        Mockito.when(commentRepository.save(Mockito.any(Comment.class)))
-                .thenAnswer(invocation -> invocation.getArgument(0));
-        var res = commentService.updateComment(id, content);
-        Assertions.assertEquals(comment.getContent(), res.getContent());
-        Assertions.assertEquals(comment.getAuthor(), res.getAuthor());
-        Assertions.assertEquals(comment.getPost_id(), res.getPost_id());
+        testComment.setId(testId);
+        String newContent = "Updated content";
 
-        Mockito.verify(commentRepository).save(Mockito.argThat(commented ->
-                commented.getContent().equals(comment.getContent()) &&
-                commented.getAuthor().equals(comment.getAuthor()) &&
-                commented.getPost_id().equals(comment.getPost_id())
-        ));
+        Mockito.doReturn(Optional.of(testComment)).when(commentRepository).findCommentById(testId);
+        Mockito.doReturn(testComment).when(commentRepository).save(testComment);
 
+        Comment result = commentService.updateComment(testId, newContent);
+
+        Mockito.verify(commentRepository).findCommentById(testId);
+        Mockito.verify(commentRepository).save(testComment);
+        Assertions.assertEquals(newContent, result.getContent());
     }
 
     @Test
     void deleteCommentTest() {
-        log.info("deleteCommentTest start.");
-        String id = "id";
-        String post_id = "post";
-        var comment = new Comment("content", "author", post_id);
-        var post = new Post("title", "content", "author");
-        post.setId(post_id);
-        comment.setId(id);
-        post.setComments(new ArrayList<>(List.of(id)));
-        Mockito.doReturn(Optional.of(comment)).when(commentRepository).findCommentById(id);
-        Mockito.doReturn(Optional.of(post)).when(postRepository).findPostById(comment.getPost_id());
-        var commented = commentService.deleteComment(id);
-        Assertions.assertEquals(comment, commented);
-        Assertions.assertTrue(post.getComments().isEmpty());
+        testComment.setId(testId);
+        Post testPost = new Post("Title", "Content", "postAuthor");
+        testPost.setComments(new ArrayList<>(Collections.singletonList(testId)));
+
+        Mockito.doReturn(Optional.of(testComment)).when(commentRepository).findCommentById(testId);
+        Mockito.doReturn(Optional.of(testPost)).when(postRepository).findPostById(testPostId);
+
+        Comment result = commentService.deleteComment(testId);
+
+        Mockito.verify(commentRepository).findCommentById(testId);
+        Mockito.verify(postRepository).findPostById(testPostId);
+        Mockito.verify(postRepository).save(testPost);
+        Mockito.verify(reactionService).deleteReactionById("comment", Collections.singletonList(testId));
+        Mockito.verify(commentRepository).deleteCommentById(testId);
+        Assertions.assertEquals(testComment, result);
+        Assertions.assertFalse(testPost.getComments().contains(testId));
     }
 }
